// Generated by github.com/davyxu/tabtoy
// Version: 3.0.0
// DO NOT EDIT!!

syntax = "proto3";

package com.donglaistd.jinli.metadata;

// Defined in table: Vip
enum VipEmum
{	

	// 未解锁
	vipEmum0 = 0; 

	// 游侠
	vipEmum1 = 1; 

	// 骑士
	vipEmum2 = 2; 

	// 男爵
	vipEmum3 = 3; 

	// 王族
	vipEmum4 = 4; 

	// 帝王
	vipEmum5 = 5; 

	// 仙圣
	vipEmum6 = 6; 

}

// Defined in table: Vip
enum Approachanimation
{	

	// 无
	approachanimation0 = 0; 

	// 条幅1
	approachanimation1 = 1; 

	// 条幅2
	approachanimation2 = 2; 

	// 条幅3
	approachanimation3 = 3; 

	// 条幅4
	approachanimation4 = 4; 

	// 条幅5
	approachanimation5 = 5; 

	// 条幅6
	approachanimation6 = 6; 

}

// Defined in table: Vip
enum Car
{	

	// 无
	car_0 = 0; 

	// 座驾A
	car_1 = 80000;

	// 座驾B
	car_2 = 80001;

	// 座驾C
	car_3 = 80002;

}

// Defined in table: Vip
enum Icon
{	

	// 无
	icon_0 = 0; 

	// 图标1
	icon_1 = 1; 

	// 图标2
	icon_2 = 2; 

	// 图标3
	icon_3 = 3; 

	// 图标4
	icon_4 = 4; 

	// 图标5
	icon_5 = 5; 

	// 图标6
	icon_6 = 6; 

}

// Defined in table: Vip
enum Upgrade
{	

	// 无
	upgrade_0 = 0; 

	// 特效1
	upgrade_1 = 1; 

	// 特效2
	upgrade_2 = 2; 

	// 特效3
	upgrade_3 = 3; 

	// 特效4
	upgrade_4 = 4; 

	// 特效5
	upgrade_5 = 5; 

}

// Defined in table: Vip
enum BarrageColor
{	

	// 无
	barrageColor_0 = 0; 

	// 绿
	barrageColor_1 = 1; 

	// 紫
	barrageColor_2 = 2; 

	// 橙
	barrageColor_3 = 3; 

	// 红
	barrageColor_4 = 4; 

	// 蓝
	barrageColor_5 = 5; 

}

// Defined in table: Vip
enum AvatarFrame
{	

	// 无
	avatarFrame_0 = 0; 

	// 框1
	avatarFrame_1 = 1; 

	// 框2
	avatarFrame_2 = 2; 

	// 框3
	avatarFrame_3 = 3; 

	// 框4
	avatarFrame_4 = 4; 

	// 框5
	avatarFrame_5 = 5; 

}


// Defined in table: Table
message Table
{	
	
	
	repeated PlayerDefine Player = 1; // Player
	
	
	repeated VipDefine Vip = 2; // Vip
	
	
	repeated IncreaseBetDefine IncreaseBet = 3; // IncreaseBet

}

// Defined in table: Player
message PlayerDefine
{	
	
	
	int32 cur_lvl = 1; // 当前等级
	
	
	int32 next_lvl = 2; // 下一等级
	
	
	int32 exp = 3; // 普通用户所需经验
	
	
	int32 announcer_exp = 4; // 主播所需经验
	
	
	string Desc = 5; // 描述

}

// Defined in table: Vip
message FunctionList
{	
	
	// 私信
	bool privateMessage = 1; 
	
	// 条幅
	Approachanimation approach = 2; 
	
	// 座驾
	Car car = 3; 
	
	// 贵族图标
	Icon icon = 4; 
	
	// 晋升特效
	Upgrade upgrade = 5; 
	
	// 弹幕颜色
	BarrageColor barrageColor = 6; 
	
	// 贵宾席
	bool vipChair = 7; 
	
	// 头像框
	AvatarFrame avatarFrame = 8; 
	
	// 连麦
	bool connectLive = 9; 

}

// Defined in table: Vip
message VipDefine
{


	VipEmum vipId = 1; // 等级ID


	int32 next_lvl = 2; // 下一等级


	int32 upgradeLvl = 3; // 所需等级


	int32 amount = 4; // 晋升条件(not used)


	FunctionList functionList = 5;


	string Desc = 6; // 描述

}

// Defined in table: IncreaseBet
message IncreaseBetDefine
{	
	
	
	int32 level = 1; // 级别
	
	
	int32 bet = 2; // 盲注
	
	
	int32 pre_bet = 3; // 前注
	
	
	int32 time = 4; // 时间(毫秒)

}

